src/objects/SBQQ__ErrorCondition__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Unique external Id populated by workflow rule.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique external Id populated by workflow rule.</inlineHelpText>
        <label>ExternalId</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FilterVariableExternalId__c</fullName>
        <formula>SBQQ__FilterVariable__r.ExternalId__c</formula>
        <label>FilterVariableExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleExternalId__c</fullName>
        <formula>SBQQ__Rule__r.ExternalId__c</formula>
        <label>RuleExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestedVariableExternalId__c</fullName>
        <formula>SBQQ__TestedVariable__r.ExternalId__c</formula>
        <label>TestedVariableExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>